# immich-to-gphotos

./: .gitignore  LICENSE  README.md  immich.conf-example  pyproject.toml
.github/workflows/: publish-pypi.yml
immich_to_gphotos/: __init__.py  __main__.py  cli.py  config.py  exit_codes.py  google_photos.py  immich_client.py  log.py  pipeline.py  state.py  transform.py
tests/: test_refresh_session.py
